--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,7 +1,12 @@
 <resources>
 
-    <dimen name="padding_small">8dp</dimen>
+  <!--   <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">8dp</dimen>
-    <dimen name="padding_large">16dp</dimen>
+    <dimen name="padding_large">16dp</dimen> -->
 
+    
+       <dimen name="padding_small">4dp</dimen>
+    <dimen name="padding_medium">4dp</dimen>
+    <dimen name="padding_large">8dp</dimen>
+    
 </resources>
